--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
       layout:decorate="~{layouts/base}" lang="en">
 
 <head>
-    <title>Quiz Backend</title>
+    <title>Kaiden Do:kaiden-dough</title>
 </head>
 
 <body>
