--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
 <th:block layout:fragment="body" th:remove="tag">
     <!-- Start of body content specific to page -->
     <div class="px-5 py-5 mx-auto">
-        <h1><strong>Maybe put an actual title hereeeeee</strong></h1>
+        <h1><strong>Kaiden Do:kaiden-dough</strong></h1>
         <p>Maybe put your image here somehow probably would be nice</p>
     </div>
     <!-- End of body content specific to page -->
